inovaciju text colors and brands

--- a/src/styles/verslo-inovaciju-labaratorija.scss
+++ b/src/styles/verslo-inovaciju-labaratorija.scss
@@ -218,7 +218,7 @@ main {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 400px 400px;
-    color: var(--dark-green);
+    color: var(--blue-dark);
     margin: auto;
     position: relative;
     background: var(--blue-extra-light);
@@ -283,7 +283,7 @@ main {
 
 
 footer {
-    color: var(--blue-extra-light);
+    color: var(--blue-extra-light) !important;
 
     .social {
         a:before {
@@ -291,8 +291,8 @@ footer {
         }
     }
 
-    .copywrites a {
-        color: var(--blue-extra-light);
+    .copywrites, .copywrites a {
+        color: var(--blue-extra-light) !important;
     }
 }
 
