--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,6 +34,12 @@ src: url("/fonts/CircularXXSub-Book.woff2") format("woff2");
 		--blue-spot: #307FEA;
 		--blue-light: #B4D7F6;
 		--blue-extra-light: #E7ECFF;
+
+		// Burgundy
+		--burgundy-dark: #2E133A;
+		--burgundy-spot: #743557;
+		--burgundy-light: #CCA099;
+		--burgundy-extra-light: #EEE9E6;
 	
 	}
 	
