--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -57,29 +57,6 @@ main {
         width: 1735px;
         height: 1578px;
         z-index: -1;
-
-        &::before {
-            content: "";
-            position: absolute;
-            left: -60%;
-            width: 100%;
-            height: 54%;
-            background: var(--burgundy-bright);
-            transform: rotate(-4deg);
-            z-index: -1;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 32.59%;
-            right: -26%;
-            width: 32%;
-            height: 54.7%;
-            background: var(--burgundy-dark);
-            transform: rotate(-3deg);
-            z-index: -1;
-        }
     }
 
     .content {
@@ -103,7 +80,7 @@ main {
 
 
     .content-2 {
-        color: var(--burgundy-dark);
+        color: var(--burgundy-extra-light);
         grid-column: 1;
         font-weight: 400;
         grid-column: 1;
@@ -265,6 +242,10 @@ main {
         width: 80vw;
         margin: auto;
 
+        h2 {
+            margin-bottom: 30px;
+        }
+
         .tabs-buttons {
             border-color: var(--burgundy-dark);
         }
@@ -281,6 +262,7 @@ main {
             grid-column: 1;
             grid-row: 1;
             margin: 50px 0;
+            position: static;
         }
 
         .tab.opened {
@@ -322,8 +304,102 @@ main {
     }
 }
 
+.acme-human {
+    position: relative;
+    top: 200px;
+    background: var(--burgundy-extra-light);
+    color: var(--burgundy-dark);
+    margin-bottom: 400px;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    width: 80vw;
+    max-width: 1400px;
+    margin: auto;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: -150px;
+        left: -40%;
+        width: 160%;
+        height: 200px;
+        background: var(--burgundy-extra-light);
+        z-index: -1;
+        transform: rotate(-4deg);
+    }
+
+    .content {
+        grid-column: 2;
+        max-width: 600px;
+
+        h2 {
+            margin-bottom: 50px;
+        }
+
+        p {
+            margin-bottom: 30px;
+        }
+
+        .check-list {
+            display: flex;
+            gap: 30px;
+            margin-top: 30px;
+
+            li {
+                list-style-position: inside;
+                list-style: none;
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                margin-bottom: 10px;
+                font-family:"CircularXXSub-Book", "Plus jakarta sans", sans-serif;
+                
+
+                img {
+                    width: 40px;
+                }
+            }
+        }
+    }
+
+    .content-2 {
+        grid-column: 1/3;
+        h3 {
+            margin-bottom: 50px;
+        }
+
+        .steps {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-column: 1/4;
+        }
+
+        .steps .step {
+            max-width: 200px;
+            text-align: center;
+            position: relative;
+
+            &:not(:last-of-type)::before {
+                content: "";
+                position: absolute;
+                right: -8vw;
+                top: 100px;
+                width: 10vw;
+                border: 1px solid var(--burgundy-light);
+            }
+            .number {
+                font-size: 5em;
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
 footer {
     color: var(--burgundy-extra-light) !important;
+    margin-top: 150px;
 
     .social {
         a:before {
