--- a/src/styles/mentoryste.scss
+++ b/src/styles/mentoryste.scss
@@ -40,7 +40,7 @@ main {
 .section-1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 800px;
+    grid-template-rows: 700px 600px;
     color: var(--burgundy-dark);
     margin: auto;
     position: relative;
@@ -48,15 +48,25 @@ main {
     transform: translateX(-300px);
 
     .shape-1 {
-        background: url('/karjera/darbo-skelbimai-shape.svg');
+        background: url('/karjera/mentoryste-shape.svg');
         background-repeat: no-repeat;
         background-size: cover;
         position: absolute;
         top: -50px;
-        left: 0px;
-        width: 1361px;
-        height: 793px;
+        right: 0px;
+        width: 1643px;
+        height: 1243px;
         z-index: -1;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: -80%;
+            height: 65%;
+            width: 100%;
+            background: var(--burgundy-light);
+            transform: rotate(-4deg);
+        }
     }
 
     .content {
@@ -73,114 +83,65 @@ main {
             margin-bottom: 50px;
         }
     }
-}
 
-
-.section-jobs {
-    color: var(--burgundy-dark);
-    margin-top: 150px;
-
-   
-    .jobs-heading {
-        display: grid;
-        grid-template-columns: 150px 1fr 150px 150px 100px;
-        width: 90vw;
-
-        h3 {
-            grid-column: 2;
-        }
-
-        p:nth-of-type(1){
-            grid-column: 3;
-        }
-        margin-bottom: 50px;
-    }
-
-    .jobs-main {
+    .content-2 {
         grid-row: 2;
-
-        .job {
-            display: grid;
-            grid-template-columns: 150px 1fr 150px 150px 100px;
-            align-items: center;
-            width: 90vw;
-            height: 130px;
-        }
-
-        .job-title {
-            grid-column: 2;
-        }
-
-        .job-logo {
-            width: 70px;
-        }
-
-        .job-link {
-            width: clamp(40px, 6vw, 61px);
-        }
-
-        hr {
-            grid-column: 2/6;
-            border: none;
-            height: 1px;
-            background: var(--burgundy-dark);
-        }
-
-       .more {
-            color: var(--burgundy-dark);
-            text-decoration: underline;
-            grid-column: 1/5;
-            text-align: center;
-       }
-
-       .no-job {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-       }
-
-       .no-job-title {
-        grid-row: 1;
-        grid-column: 3/6;
-        }
-
-       .no-job-description {
-            grid-row: 2;
-            grid-column: 3/6;
-            margin: 50px 0;
-       }
-
-   
-
-       .button-outline {
-        grid-row: 3;
-        grid-column: 3;
-        border-color: var(--burgundy-dark);
-        color: var(--burgundy-dark);
-        width: 200px;
-
-        &:hover {
-            background: var(--burgundy-dark);
-            color: var(--burgundy-extra-light);
-        }
-    }
-
-    }
-}
-
-.other-jobs {
-    display: grid;
-    grid-template-columns: 150px 1fr 150px 150px 100px;
-    color: var(--burgundy-dark);
-    margin-top: 100px;
-
-    .content {
         grid-column: 2;
+        max-width: 600px;
+        position: absolute;
+        right: 50px;
+        color: var(--burgundy-extra-light);
 
         h2 {
-            margin-bottom: 30px;
+            margin-bottom: 50px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        .button {
+            margin-top: 30px;
+            background:  var(--burgundy-extra-light);
+            color: var(--burgundy-spot);
+        }
+    }
+
+    .content-info {
+        align-self: center;
+        justify-self: center;
+        grid-row: 2;
+
+        .icons {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-auto-rows: 150px;
+            align-items: center;
+            column-gap: 150px;
+            row-gap: 50px;
+
+            .icon {
+                text-align: center;
+
+                img {
+                    height: 70px;
+                }
+            }
         }
     }
 }
+
+
+.animated-opacity {
+    color: var(--burgundy-dark);
+    font-size: clamp(21px, 3vw, 58px);
+    transform: translate(13vw, 0%);
+    margin: 100px 0;
+    width: 80%;
+}
+
+
+
 
 
 
