--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -13,13 +13,13 @@ button, a, .logo, .right {
 
 header {
     .logo {
-        transform: translateY(0%);
-        clip-path: inset(0 0 0% 0);
+        transform: translateY(0%) !important;
+        clip-path: inset(0 0 0% 0) !important;
     }
 
     .right {
-        transform: translateY(0px);
-        clip-path: inset(0 0 0% 0);
+        transform: translateY(0px) !important;
+        clip-path: inset(0 0 0% 0) !important;
         color: var(--burgundy-dark) !important;
 
         .menu .line,
