--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -57,6 +57,33 @@ main {
         width: 1735px;
         height: 1578px;
         z-index: -1;
+
+        &::before {
+            content: "";
+            position: absolute;
+            right: -50%;
+            top: 6.36%;
+            height: 78.9%;
+            width: 50%;
+            background: var(--burgundy-light);
+        }
+    }
+
+    .shape-2 {
+     
+        width: 521px;
+        height: 965px;
+        position: absolute;
+        top: 355px;
+        left: 1214px;
+        z-index: -2;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 0 0 0 10px;
+        }
     }
 
     .content {
@@ -314,7 +341,7 @@ main {
     z-index: 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: 511px;
     width: 80vw;
     max-width: 1400px;
     margin: auto;
@@ -324,16 +351,30 @@ main {
         position: absolute;
         top: -150px;
         left: -40%;
-        width: 160%;
+        width: 170%;
         height: 200px;
         background: var(--burgundy-extra-light);
         z-index: -1;
         transform: rotate(-4deg);
     }
 
+    .acme-shape {
+        background: var(--burgundy-spot);
+        width: 50%;
+        height: 600px;
+        position: absolute;
+        left: -300px;
+        object-fit: cover;
+        z-index: -1;
+    }
+
     .content {
         grid-column: 2;
         max-width: 600px;
+
+        &:first-of-type .acme-shape {
+            border-radius: 0 200px 0 0;
+        }
 
         h2 {
             margin-bottom: 50px;
@@ -369,6 +410,8 @@ main {
         grid-column: 1/3;
         h3 {
             margin-bottom: 50px;
+            padding-top: 50px;
+            color: var(--burgundy-extra-light);
         }
 
         .steps {
@@ -381,6 +424,16 @@ main {
             max-width: 200px;
             text-align: center;
             position: relative;
+
+            &:first-of-type {
+                .number {
+                    color: var(--burgundy-light);
+                }
+
+                p {
+                    color: var(--burgundy-extra-light);
+                }
+            }
 
             &:not(:last-of-type)::before {
                 content: "";
